--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Set up JDK 16
         uses: actions/setup-java@v4
         with:
-          java-version: '8'
-          distribution: 'adopt'
+          java-version: '16'
+          distribution: 'corretto'
           server-id: azisaba
       - name: Build with Maven
         run: mvn -B package --file pom.xml
