--- a/.github/workflows/released.yml
+++ b/.github/workflows/released.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Setup JDK #JDKセットアップ
         uses: actions/setup-java@v3
